# ehr_ai_services

./: .env.example  .gitignore  Dockerfile  additional planning.md  alembic.ini  case stories for testing.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  seed_facilities.py
app/: db.py  dependencies.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: analysis.py  coding.py  discharge.py  documents.py  facilities.py  medical_data.py  query.py
app/core/: config.py  llama_setup.py  logging.py
app/models/: __init__.py  models.py  sql_models.py
app/services/: llama_service.py
app/utils/: document_utils.py
docs/: database_schema_map.html
documents/: some text.txt
init-scripts/: 01-init.sql
migrations/: env.py
migrations/versions/: 24bceff4d06d_add_external_id_to_facilities_table.py  8e3d844d1f03_initial_migration_with_all_tables.py  a1eb74c7c068_add_collection_id_foreign_key_to_.py  ce00cffd83bb_fix_patient_identifier_relationships.py
